# FakeNewsRecognition

./: .gitignore  README.md  pyproject.toml
fake_recognition/: db.sqlite3  requirements.txt  vercel.json
fake_recognition/config/: asgi.py  settings.py  urls.py  wsgi.py
fake_recognition/news_check/: admin.py  apps.py  choices.py  forms.py  models.py  news_class_predict.py  serializer.py  urls.py  views.py
fake_recognition/news_check/templates/news_check/: index.html
fake_recognition/static/: main.css
model/: classification.ipynb
